--- a/friends.html
+++ b/friends.html
@@ -38,7 +38,7 @@
       ><i class="fa-solid fa-circle-info"></i> Friend's Names Display
       <i class="fa-solid fa-angle-right fa-xs"></i
     ></a>
-    <main class="friends-screen">
+    <main class="main-screen">
       <!-- user-components : photo, name (+subtitle, icon)-->
       <div class="user-component">
         <div class="user-component__column">
