--- a/more.html
+++ b/more.html
@@ -31,11 +31,11 @@
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -64,6 +64,19 @@
         </div>
         <div class="icon-row__icon">
           <i class="fa-solid fa-id-badge fa-2x"></i><span>Account</span>
+        </div>
+      </div>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestios__icon-image"><i class="fa-solid fa-quote-right"></i></div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestios__icon-image"><i class="fa-solid fa-quote-right"></i></div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
         </div>
       </div>
     </main>
