--- a/friends.html
+++ b/friends.html
@@ -116,6 +116,8 @@
       </ul>
     </nav>
 
+    <div id="splash-screen"><i class="fa-solid fa-comment fa-lg"></i></div>
+
     <script
       src="https://kit.fontawesome.com/3e809e2e54.js"
       crossorigin="anonymous"
