--- a/settings.html
+++ b/settings.html
@@ -22,16 +22,48 @@
         <span>110%</span>
         <!-- Battery icon: 해당 태그는 2개의 클래스를 갖는다(fa-solid와 fa-battery-full)-->
         <i class="fa-solid fa-battery-full"></i>
-        <!-- Lightining icon -->
+        <!-- Lightening icon -->
         <i class="fa-solid fa-bolt-lightning"></i>
       </div>
     </div>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="more.html"> <i class="fa-solid fa-angle-left fa-2x"></i></a>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Settings</h1>
+      </div>
+      <div class="alt-header__column">
+        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+      </div>
+    </header>
+
     <main class="main-screen">
-      <div class="alt-header"></div>
+      <ul class="settings-list">
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-bullhorn"></i>
+            <span>Notices</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-flask"></i>
+            <span>Kokoa Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-circle-info"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">Latest Version</div>
+        </li>
+      </ul>
     </main>
 
-    <!-- navigation bar
-      tag와 class의 이름이 같아도 ok -->
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
