--- a/chat.html
+++ b/chat.html
@@ -74,6 +74,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/3e809e2e54.js"
       crossorigin="anonymous"
