--- a/friends.html
+++ b/friends.html
@@ -100,7 +100,7 @@
         <li class="nav__btn">
           <a class="nav__a" href="chats.html"
             ><span class="nav__notification badge">1</span
-            ><i class="fa-regular fa-comment fa-lg"></i
+            ><i class="fa-regular fa-comment fa-xl"></i
           ></a>
         </li>
         <li class="nav__btn">
@@ -117,6 +117,10 @@
     </nav>
 
     <div id="splash-screen"><i class="fa-solid fa-comment fa-lg"></i></div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/3e809e2e54.js"
