--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       <input type="submit" value="Log in" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/3e809e2e54.js"
       crossorigin="anonymous"
