--- a/more.html
+++ b/more.html
@@ -94,7 +94,7 @@
         <li class="nav__btn">
           <a class="nav__a" href="chats.html"
             ><span class="nav__notification badge">1</span
-            ><i class="fa-regular fa-comment fa-lg"></i
+            ><i class="fa-regular fa-comment fa-xl"></i
           ></a>
         </li>
         <li class="nav__btn">
@@ -109,6 +109,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/3e809e2e54.js"
