--- a/friends.html
+++ b/friends.html
@@ -119,7 +119,7 @@
     <div id="splash-screen"><i class="fa-solid fa-comment fa-lg"></i></div>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is super big ㅠㅠ</span>
     </div>
 
     <script
