--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to KakaoTalk</title>
+    <title>Welcome to Dessert Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -29,9 +29,10 @@
     <!-- 정리할 내용: BEM(Block Element Modifier)-->
     <!-- 많은 웹페이지들이 header을 가질 확률이 높으므로 header에 class 속성 적용-->
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to KoKoa Talk</h1>
+      <h1 class="welcome-header__title">Welcome to Dessert Talk</h1>
       <p class="welcome-header__text">
-        If you have a KoKoa Acount, log in with your email or phone number.
+        <div>If you have a KoKoa Acount,</div>
+        <div>log in with your email or phone number.</div>
       </p>
     </header>
     <!-- action : 어떤 페이지로 data를 보낼건지
