--- a/chat.html
+++ b/chat.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with Cosmos-Kokoa Clone</title>
+    <title>Chat with Other Dessert</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
