--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>More-Kokoa Clone</title>
+    <title>Dessert More</title>
   </head>
   <body>
     <div class="status-bar">
